main - remove unused types
