# src/modules/transactions/transactions.controller.ts
@@ -1,8 +1,8 @@
 import { Controller, Get, NotFoundException, Param, Query, ValidationPipe } from '@nestjs/common';
 import { ApiOperation, ApiQuery, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { TransactionsService } from './transactions.service';
-import { PaginatedTransactionResponseDto, TransactionDto } from '../../dtos/transaction.dto';
-import { PaginationQueryDto } from '../../dtos/pagination.dto';
+import { TransactionDto } from '../../dtos/transaction.dto';
+import { PaginatedResponseDto, PaginationQueryDto } from '../../dtos/pagination.dto';
 
 @ApiTags('Transactions')
 @Controller('users/:userId/transactions')
@@ -12,7 +12,7 @@ export class TransactionsController {
 
   @Get()
   @ApiOperation({ summary: 'Get all transactions for a user' })
-  @ApiResponse({ status: 200, type: PaginatedTransactionResponseDto })
+  @ApiResponse({ status: 200, type: PaginatedResponseDto<TransactionDto> })
   @ApiQuery({ name: 'hobbyId', required: false })
   async findAll(
     @Param('userId') userId: string,
